Update package version to 1.0.1 and change main entry point to src/index.d.ts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "llorcadev-utils",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "1.0.1",
+  "main": "src/index.d.ts",
   "directories": {
     "doc": "docs"
   },
